// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Photo /> should render photo (landscape center) 1`] = `
<DocumentFragment>
  <figure
    class="c-bUGSFZ c-bUGSFZ-iVqPaJ-position-center c-bUGSFZ-iiCDtyl-css"
    data-testid="photo"
  >
    <div
      class="c-igxWur c-igxWur-ibEeMWi-css"
    />
    <figcaption
      class="c-iMVRpC"
    >
      <span>
        Single photography
      </span>
      <span
        class="c-hTMuHN"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`<Photo /> should render photo (landscape left) 1`] = `
<DocumentFragment>
  <figure
    class="c-bUGSFZ c-bUGSFZ-iiCDtyl-css"
    data-testid="photo"
  >
    <div
      class="c-igxWur c-igxWur-ibEeMWi-css"
    />
    <figcaption
      class="c-iMVRpC"
    >
      <span>
        Single photography
      </span>
      <span
        class="c-hTMuHN"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`<Photo /> should render photo (landscape right) 1`] = `
<DocumentFragment>
  <figure
    class="c-bUGSFZ c-bUGSFZ-gGTwqu-position-right c-bUGSFZ-iiCDtyl-css"
    data-testid="photo"
  >
    <div
      class="c-igxWur c-igxWur-ibEeMWi-css"
    />
    <figcaption
      class="c-iMVRpC"
    >
      <span>
        Single photography
      </span>
      <span
        class="c-hTMuHN"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`<Photo /> should render photo (portrait center) 1`] = `
<DocumentFragment>
  <figure
    class="c-bUGSFZ c-bUGSFZ-iVqPaJ-position-center c-bUGSFZ-iiCDtyl-css"
    data-testid="photo"
  >
    <div
      class="c-igxWur c-igxWur-ibEeMWi-css"
    />
    <figcaption
      class="c-iMVRpC"
    >
      <span>
        Single photography
      </span>
      <span
        class="c-hTMuHN"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</DocumentFragment>
`;

exports[`<Photo /> should render photo (square center) 1`] = `
<DocumentFragment>
  <figure
    class="c-bUGSFZ c-bUGSFZ-iVqPaJ-position-center c-bUGSFZ-iiCDtyl-css"
    data-testid="photo"
  >
    <div
      class="c-igxWur c-igxWur-ibEeMWi-css"
    />
    <figcaption
      class="c-iMVRpC"
    >
      <span>
        Single photography
      </span>
      <span
        class="c-hTMuHN"
      >
        Janvier 2019
      </span>
    </figcaption>
  </figure>
</DocumentFragment>
`;
